--- a/templates/overdue_report.html
+++ b/templates/overdue_report.html
@@ -9,17 +9,27 @@
                 <tr class="bg-indigo-100">
                     <th class="border p-3 text-left">Username</th>
                     <th class="border p-3 text-left">Book ID</th>
+                    <th class="border p-3 text-left">Book Title</th>
                     <th class="border p-3 text-left">Loan Date</th>
                     <th class="border p-3 text-left">Days Overdue</th>
+                    <th class="border p-3 text-left">Action</th>
                 </tr>
             </thead>
             <tbody>
-                {% for loan in loans %}
+                {% for item in loans %}
                 <tr class="hover:bg-gray-50">
-                    <td class="border p-3">{{ loan.username }}</td>
-                    <td class="border p-3">{{ loan.book_id }}</td>
-                    <td class="border p-3">{{ loan.loan_date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
-                    <td class="border p-3">{{ ((loan.loan_date - loan.loan_date).days + 14) if not loan.return_date else 'N/A' }}</td>
+                    <td class="border p-3">{{ item.loan.username }}</td>
+                    <td class="border p-3">{{ item.loan.book_id }}</td>
+                    <td class="border p-3">{{ (books | selectattr('id', 'equalto', item.loan.book_id) | first).title }}</td>
+                    <td class="border p-3">{{ item.loan.loan_date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                    <td class="border p-3">{{ item.days_overdue }}</td>
+                    <td class="border p-3">
+                        {% if not item.loan.warning_sent %}
+                        <a href="{{ url_for('send_warning', username=item.loan.username, book_id=item.loan.book_id) }}" class="text-yellow-600 hover:text-yellow-800 font-medium">Send Warning</a>
+                        {% else %}
+                        <span class="text-gray-500">Warning Sent</span>
+                        {% endif %}
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
